# hades-game-engine

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  requirements-docs.txt  test.cpp.h
.github/workflows/: cmake-multi-platform.yml  docs-pages.yml
docs/: architecture.md  index.md
lib/bgfx/: CMakeLists.txt
lib/bgfx/bimg/: CMakeLists.txt
lib/bgfx/src/: config.h
lib/imgui/: CMakeLists.txt
lib/imgui/backends/: imgui_impl_sdl2.cpp
scripts/: generate_class_diagram.py
src/: main.cpp  main.mm
src/editor/: editor.hpp  types.h  window_manager.hpp
src/engine/components/: position_component_2d.hpp  position_component_3d.hpp  render_component.hpp  transform_hierarchy_component.hpp
src/engine/core/ecs/: component_array.hpp  component_manager.hpp  constants.h  entity.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  transform_hierarchy_component.hpp
src/engine/gui/: gui.hpp  imgui.hpp
src/engine/rendering/: renderer.hpp  vulkan.hpp
src/engine/systems/: movement_system.hpp  render_system.hpp
src/tests/: test.cpp
src/tests/backpack/: 12305_backpack_v2_l3.mtl
